generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum TenantStatus {
  ACTIVE
  INACTIVE
}

enum DashboardType {
  PERSONAL
  SHARED
  CONTEXTUAL
}

enum ConnectorStatus {
  ACTIVE
  DISABLED
  ERROR
}

enum ConnectorAuthType {
  NONE
  API_KEY
  OAUTH
  BASIC
}

enum WidgetRefreshMode {
  SNAPSHOT
  LIVE
  HYBRID
}

enum SnapshotGenerationStatus {
  PENDING
  READY
  FAILED
}

enum WidgetSnapshotStatus {
  PENDING
  READY
  FAILED
}

enum SnapshotJobStatus {
  PENDING
  PROCESSING
  COMPLETED
  FAILED
  SKIPPED
}

enum DashboardBriefingStatus {
  PENDING
  GENERATING
  READY
  FAILED
}

enum ApplicationLogLevel {
  INFO
  WARN
  ERROR
}

model Tenant {
  id          String             @id @default(uuid()) @db.Uuid
  name        String             @map("tenant_name")
  slug        String             @unique @map("tenant_slug")
  status      TenantStatus       @default(ACTIVE)
  createdAt   DateTime           @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt   DateTime           @updatedAt @map("updated_at") @db.Timestamptz(6)
  users       AppUser[]
  dashboards  Dashboard[]
  widgets     DashboardWidget[]
  connectors  Connector[]
  rssFeedCategories RssFeedCategory[]
  newsArticleSelections NewsArticleSelection[]
  referenceCities ReferenceCity[]
  snapshots   BriefingSnapshot[]
  aiConfiguration TenantAiConfiguration?

  @@map("tenants")
}

model TenantAiConfiguration {
  id           String   @id @default(uuid()) @db.Uuid
  tenantId      String   @unique @map("tenant_id") @db.Uuid
  openAiApiKey  String?  @map("openai_api_key")
  openAiModel   String   @default("gpt-5-mini") @map("openai_model")
  createdAt     DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt     DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)
  tenant        Tenant   @relation(fields: [tenantId], references: [id], onDelete: Cascade)

  @@map("tenant_ai_configurations")
}

model RssFeedCategory {
  id             String     @id @default(uuid()) @db.Uuid
  tenantId       String     @map("tenant_id") @db.Uuid
  name           String
  normalizedName String     @map("normalized_name")
  description    String     @default("")
  sortOrder      Int        @default(0) @map("sort_order")
  createdAt      DateTime   @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt      DateTime   @updatedAt @map("updated_at") @db.Timestamptz(6)
  tenant         Tenant     @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  feeds          RssFeed[]

  @@unique([tenantId, normalizedName])
  @@index([tenantId, sortOrder])
  @@map("rss_feed_categories")
}

model RssFeed {
  id          String          @id @default(uuid()) @db.Uuid
  categoryId  String          @map("category_id") @db.Uuid
  name        String
  url         String
  createdAt   DateTime        @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt   DateTime        @updatedAt @map("updated_at") @db.Timestamptz(6)
  category    RssFeedCategory @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  @@index([categoryId])
  @@map("rss_feeds")
}

model AppUser {
  id           String             @id @default(uuid()) @db.Uuid
  tenantId     String             @map("tenant_id") @db.Uuid
  email        String
  displayName  String             @map("display_name")
  phoneticName String?            @map("phonetic_name")
  avatarDataUrl String?           @map("avatar_data_url")
  avatarUrl    String?            @map("avatar_url")
  timezone     String
  locale       String
  preferredLanguage String        @default("en-GB") @map("preferred_language")
  isAdmin      Boolean            @default(false) @map("is_admin")
  isActive     Boolean            @default(true) @map("is_active")
  telegramChatId String?          @map("telegram_chat_id")
  telegramDeliveryEnabled Boolean @default(false) @map("telegram_delivery_enabled")
  createdAt    DateTime           @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt    DateTime           @updatedAt @map("updated_at") @db.Timestamptz(6)
  tenant       Tenant             @relation(fields: [tenantId], references: [id], onDelete: Restrict)
  dashboards   Dashboard[]
  ownedConnectors Connector[]      @relation("ConnectorOwner")
  snapshots    BriefingSnapshot[]
  dashboardBriefingJobs DashboardBriefingGenerationJob[]

  @@unique([tenantId, email])
  @@index([tenantId])
  @@map("app_users")
}

model Dashboard {
  id                 String          @id @default(uuid()) @db.Uuid
  tenantId           String          @map("tenant_id") @db.Uuid
  ownerUserId        String          @map("owner_user_id") @db.Uuid
  name               String
  description        String?
  dashboardType      DashboardType   @default(PERSONAL) @map("dashboard_type")
  isDefault          Boolean         @default(false) @map("is_default")
  isActive           Boolean         @default(true) @map("is_active")
  archivedAt         DateTime?       @map("archived_at") @db.Timestamptz(6)
  isGenerating       Boolean         @default(false) @map("is_generating")
  version            Int             @default(1)
  activationRuleJson Json?           @map("activation_rule_json")
  themeJson          Json?           @map("theme_json")
  createdAt          DateTime        @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt          DateTime        @updatedAt @map("updated_at") @db.Timestamptz(6)
  tenant             Tenant          @relation(fields: [tenantId], references: [id], onDelete: Restrict)
  owner              AppUser         @relation(fields: [ownerUserId], references: [id], onDelete: Restrict)
  widgets            DashboardWidget[]
  snapshots          BriefingSnapshot[]
  briefingPreferences DashboardBriefingPreference?
  dashboardBriefings DashboardBriefing[]
  briefingGenerationJobs DashboardBriefingGenerationJob[]

  @@index([tenantId])
  @@index([ownerUserId])
  @@map("dashboards")
}

model DashboardWidget {
  id            String            @id @default(uuid()) @db.Uuid
  tenantId      String            @map("tenant_id") @db.Uuid
  dashboardId   String            @map("dashboard_id") @db.Uuid
  widgetType    String            @map("widget_type")
  title         String
  positionX     Int               @map("position_x")
  positionY     Int               @map("position_y")
  width         Int
  height        Int
  minWidth      Int               @default(1) @map("min_width")
  minHeight     Int               @default(1) @map("min_height")
  isVisible     Boolean           @default(true) @map("is_visible")
  archivedAt    DateTime?         @map("archived_at") @db.Timestamptz(6)
  isGenerating  Boolean           @default(false) @map("is_generating")
  refreshMode   WidgetRefreshMode @default(SNAPSHOT) @map("refresh_mode")
  sortOrder     Int               @default(0) @map("sort_order")
  version       Int               @default(1)
  configJson    Json?             @map("config_json")
  configHash    String?           @map("config_hash")
  includeInBriefingOverride Boolean? @map("include_in_briefing_override")
  createdAt     DateTime          @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt     DateTime          @updatedAt @map("updated_at") @db.Timestamptz(6)
  tenant        Tenant            @relation(fields: [tenantId], references: [id], onDelete: Restrict)
  dashboard     Dashboard         @relation(fields: [dashboardId], references: [id], onDelete: Cascade)
  connectors    WidgetConnector[]
  snapshots     WidgetSnapshot[]
  snapshotJobs  SnapshotGenerationJob[]
  newsArticleSelections NewsArticleSelection[]

  @@index([tenantId])
  @@index([dashboardId])
  @@map("dashboard_widgets")
}

model ReferenceCity {
  id            String    @id @default(uuid()) @db.Uuid
  tenantId      String?   @map("tenant_id") @db.Uuid
  geonameId     Int       @unique @map("geoname_id")
  name          String
  asciiName     String    @map("ascii_name")
  countryCode   String    @map("country_code")
  adminName1    String?   @map("admin_name_1")
  timezone      String?
  latitude      Decimal   @db.Decimal(9, 6)
  longitude     Decimal   @db.Decimal(9, 6)
  population    BigInt?
  isActive      Boolean   @default(true) @map("is_active")
  createdAt     DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt     DateTime  @updatedAt @map("updated_at") @db.Timestamptz(6)
  tenant        Tenant?   @relation(fields: [tenantId], references: [id], onDelete: SetNull)

  @@index([name])
  @@index([asciiName])
  @@index([countryCode, name])
  @@map("reference_cities")
}

model Connector {
  id          String            @id @default(uuid()) @db.Uuid
  tenantId    String            @map("tenant_id") @db.Uuid
  ownerUserId String?           @map("owner_user_id") @db.Uuid
  connectorType String          @map("connector_type")
  name        String
  status      ConnectorStatus   @default(ACTIVE)
  authType    ConnectorAuthType @default(NONE) @map("auth_type")
  baseUrl     String?           @map("base_url")
  configJson  Json?             @map("config_json")
  secretRef   String?           @map("secret_ref")
  lastSyncAt  DateTime?         @map("last_sync_at") @db.Timestamptz(6)
  createdAt   DateTime          @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt   DateTime          @updatedAt @map("updated_at") @db.Timestamptz(6)
  tenant      Tenant            @relation(fields: [tenantId], references: [id], onDelete: Restrict)
  owner       AppUser?          @relation("ConnectorOwner", fields: [ownerUserId], references: [id], onDelete: SetNull)
  widgets     WidgetConnector[]

  @@index([tenantId])
  @@index([ownerUserId])
  @@map("connectors")
}

model WidgetConnector {
  id                String          @id @default(uuid()) @db.Uuid
  dashboardWidgetId String          @map("dashboard_widget_id") @db.Uuid
  connectorId       String          @map("connector_id") @db.Uuid
  usageRole         String          @map("usage_role")
  createdAt         DateTime        @default(now()) @map("created_at") @db.Timestamptz(6)
  dashboardWidget   DashboardWidget @relation(fields: [dashboardWidgetId], references: [id], onDelete: Cascade)
  connector         Connector       @relation(fields: [connectorId], references: [id], onDelete: Cascade)

  @@unique([dashboardWidgetId, connectorId, usageRole])
  @@index([connectorId])
  @@map("widget_connectors")
}

model NewsArticleSelection {
  id                String          @id @default(uuid()) @db.Uuid
  tenantId          String          @map("tenant_id") @db.Uuid
  dashboardWidgetId String          @map("dashboard_widget_id") @db.Uuid
  snapshotDate      DateTime        @map("snapshot_date") @db.Date
  articleKey        String          @map("article_key")
  categoryName      String          @map("category_name")
  categoryDescription String        @default("") @map("category_description")
  title             String
  articleUrl        String          @map("article_url")
  summary           String          @default("")
  sourceName        String          @default("") @map("source_name")
  publishedAt       DateTime?       @map("published_at") @db.Timestamptz(6)
  createdAt         DateTime        @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt         DateTime        @updatedAt @map("updated_at") @db.Timestamptz(6)
  tenant            Tenant          @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  dashboardWidget   DashboardWidget @relation(fields: [dashboardWidgetId], references: [id], onDelete: Cascade)

  @@unique([dashboardWidgetId, snapshotDate, articleKey])
  @@index([dashboardWidgetId, snapshotDate])
  @@index([dashboardWidgetId, articleKey])
  @@map("news_article_selections")
}

model BriefingSnapshot {
  id               String                   @id @default(uuid()) @db.Uuid
  tenantId         String                   @map("tenant_id") @db.Uuid
  userId           String                   @map("user_id") @db.Uuid
  dashboardId      String                   @map("dashboard_id") @db.Uuid
  snapshotDate     DateTime                 @map("snapshot_date") @db.Date
  generatedAt      DateTime                 @default(now()) @map("generated_at") @db.Timestamptz(6)
  generationStatus SnapshotGenerationStatus @default(PENDING) @map("generation_status")
  summaryJson      Json?                    @map("summary_json")
  expiresAt        DateTime?                @map("expires_at") @db.Timestamptz(6)
  tenant           Tenant                   @relation(fields: [tenantId], references: [id], onDelete: Restrict)
  user             AppUser                  @relation(fields: [userId], references: [id], onDelete: Restrict)
  dashboard        Dashboard                @relation(fields: [dashboardId], references: [id], onDelete: Cascade)
  widgetSnapshots  WidgetSnapshot[]

  @@unique([userId, dashboardId, snapshotDate])
  @@index([tenantId])
  @@index([dashboardId])
  @@map("briefing_snapshots")
}

model ApplicationLogEvent {
  id          String              @id
  timestamp   DateTime            @db.Timestamptz(6)
  level       ApplicationLogLevel
  scope       String
  event       String
  message     String
  contextJson Json?               @map("context_json")
  createdAt   DateTime            @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([timestamp])
  @@index([level, timestamp])
  @@map("application_log_events")
}


model WidgetSnapshot {
  id                String               @id @default(uuid()) @db.Uuid
  snapshotId        String               @map("snapshot_id") @db.Uuid
  dashboardWidgetId String               @map("dashboard_widget_id") @db.Uuid
  widgetType        String               @map("widget_type")
  title             String
  contentJson       Json?                @map("content_json")
  contentHash       String?              @map("content_hash")
  generatedAt       DateTime             @default(now()) @map("generated_at") @db.Timestamptz(6)
  status            WidgetSnapshotStatus @default(PENDING)
  errorMessage      String?              @map("error_message")
  snapshot          BriefingSnapshot     @relation(fields: [snapshotId], references: [id], onDelete: Cascade)
  dashboardWidget   DashboardWidget      @relation(fields: [dashboardWidgetId], references: [id], onDelete: Restrict)

  @@unique([snapshotId, dashboardWidgetId])
  @@index([snapshotId])
  @@index([dashboardWidgetId])
  @@map("widget_snapshots")
}

model SnapshotGenerationJob {
  id                    String            @id @default(uuid()) @db.Uuid
  widgetId              String            @map("widget_id") @db.Uuid
  dashboardId           String            @map("dashboard_id") @db.Uuid
  tenantId              String            @map("tenant_id") @db.Uuid
  userId                String            @map("user_id") @db.Uuid
  snapshotDate          DateTime          @map("snapshot_date") @db.Date
  triggerSource         String            @map("trigger_source")
  idempotencyKey        String            @unique @map("idempotency_key")
  requestedConfigVersion Int             @map("requested_config_version")
  requestedConfigHash   String            @map("requested_config_hash")
  status                SnapshotJobStatus @default(PENDING)
  attemptCount          Int               @default(0) @map("attempt_count")
  duplicateSkipCount    Int               @default(0) @map("duplicate_skip_count")
  lastMessageId         String?           @map("last_message_id")
  lastError             String?           @map("last_error")
  startedAt             DateTime?         @map("started_at") @db.Timestamptz(6)
  completedAt           DateTime?         @map("completed_at") @db.Timestamptz(6)
  leaseExpiresAt        DateTime?         @map("lease_expires_at") @db.Timestamptz(6)
  lastDuplicateAt       DateTime?         @map("last_duplicate_at") @db.Timestamptz(6)
  createdAt             DateTime          @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt             DateTime          @updatedAt @map("updated_at") @db.Timestamptz(6)
  widget                DashboardWidget   @relation(fields: [widgetId], references: [id], onDelete: Cascade)

  @@index([widgetId, snapshotDate])
  @@index([dashboardId, snapshotDate])
  @@index([userId, snapshotDate])
  @@map("snapshot_generation_jobs")
}

model DashboardBriefingGenerationJob {
  id                 String            @id @default(uuid()) @db.Uuid
  dashboardId        String            @map("dashboard_id") @db.Uuid
  tenantId           String            @map("tenant_id") @db.Uuid
  ownerUserId        String            @map("owner_user_id") @db.Uuid
  idempotencyKey     String            @unique @map("idempotency_key")
  status             SnapshotJobStatus @default(PENDING)
  attemptCount       Int               @default(0) @map("attempt_count")
  duplicateSkipCount Int               @default(0) @map("duplicate_skip_count")
  lastMessageId      String?           @map("last_message_id")
  lastError          String?           @map("last_error")
  startedAt          DateTime?         @map("started_at") @db.Timestamptz(6)
  completedAt        DateTime?         @map("completed_at") @db.Timestamptz(6)
  leaseExpiresAt     DateTime?         @map("lease_expires_at") @db.Timestamptz(6)
  lastDuplicateAt    DateTime?         @map("last_duplicate_at") @db.Timestamptz(6)
  createdAt          DateTime          @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt          DateTime          @updatedAt @map("updated_at") @db.Timestamptz(6)
  dashboard          Dashboard         @relation(fields: [dashboardId], references: [id], onDelete: Cascade)
  owner              AppUser           @relation(fields: [ownerUserId], references: [id], onDelete: Cascade)

  @@index([dashboardId, createdAt])
  @@index([ownerUserId, createdAt])
  @@map("dashboard_briefing_generation_jobs")
}

model DashboardBriefingPreference {
  id                    String    @id @default(uuid()) @db.Uuid
  dashboardId           String    @unique @map("dashboard_id") @db.Uuid
  enabled               Boolean   @default(true)
  autoGenerate          Boolean   @default(false) @map("auto_generate")
  targetDurationSeconds Int       @default(75) @map("target_duration_seconds")
  tone                  String    @default("calm, concise, professional")
  language              String    @default("en-GB")
  voiceName             String    @default("default") @map("voice_name")
  includeWidgetTypesJson Json?    @map("include_widget_types_json")
  createdAt             DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt             DateTime  @updatedAt @map("updated_at") @db.Timestamptz(6)
  dashboard             Dashboard @relation(fields: [dashboardId], references: [id], onDelete: Cascade)

  @@map("dashboard_briefing_preferences")
}

model DashboardBriefing {
  id                       String                  @id @default(uuid()) @db.Uuid
  dashboardId              String                  @map("dashboard_id") @db.Uuid
  status                   DashboardBriefingStatus @default(PENDING)
  sourceSnapshotHash       String                  @map("source_snapshot_hash")
  generatedAt              DateTime?               @map("generated_at") @db.Timestamptz(6)
  modelName                String                  @default("") @map("model_name")
  promptVersion            String                  @default("dashboard-briefing-v1") @map("prompt_version")
  scriptText               String                  @default("") @map("script_text")
  scriptJson               Json?                   @map("script_json")
  estimatedDurationSeconds Int?                    @map("estimated_duration_seconds")
  errorMessage             String?                 @map("error_message")
  createdAt                DateTime                @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt                DateTime                @updatedAt @map("updated_at") @db.Timestamptz(6)
  dashboard                Dashboard               @relation(fields: [dashboardId], references: [id], onDelete: Cascade)
  audio                    DashboardBriefingAudio[]

  @@index([dashboardId, createdAt])
  @@index([dashboardId, sourceSnapshotHash])
  @@map("dashboard_briefings")
}

model DashboardBriefingAudio {
  id                  String             @id @default(uuid()) @db.Uuid
  dashboardBriefingId String             @map("dashboard_briefing_id") @db.Uuid
  provider            String
  voiceName           String             @map("voice_name")
  storageKey          String             @map("storage_key")
  mimeType            String             @map("mime_type")
  durationSeconds     Int?               @map("duration_seconds")
  generatedAt         DateTime?          @map("generated_at") @db.Timestamptz(6)
  createdAt           DateTime           @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt           DateTime           @updatedAt @map("updated_at") @db.Timestamptz(6)
  briefing            DashboardBriefing  @relation(fields: [dashboardBriefingId], references: [id], onDelete: Cascade)

  @@index([dashboardBriefingId, createdAt])
  @@map("dashboard_briefing_audio")
}
