@startuml
hide circle
hide methods
skinparam classAttributeIconSize 0
skinparam linetype ortho
left to right direction

class Tenant {
  +tenant_id : UUID
  --
  tenant_name : varchar
  tenant_slug : varchar
  status : varchar
  created_at : timestamp
  updated_at : timestamp
}

class AppUser {
  +user_id : UUID
  --
  tenant_id : UUID
  email : varchar
  display_name : varchar
  phonetic_name : varchar?
  avatar_data_url : text?
  avatar_url : varchar?
  timezone : varchar
  locale : varchar
  preferred_language : varchar
  telegram_chat_id : varchar?
  telegram_delivery_enabled : boolean
  is_admin : boolean
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

class Dashboard {
  +dashboard_id : UUID
  --
  tenant_id : UUID
  owner_user_id : UUID
  name : varchar
  description : varchar
  dashboard_type : varchar
  is_default : boolean
  is_active : boolean
  archived_at : timestamp?
  is_generating : boolean
  version : int
  activation_rule_json : json
  theme_json : json
  created_at : timestamp
  updated_at : timestamp
}

class DashboardWidget {
  +dashboard_widget_id : UUID
  --
  tenant_id : UUID
  dashboard_id : UUID
  widget_type : varchar
  title : varchar
  position_x : int
  position_y : int
  width : int
  height : int
  min_width : int
  min_height : int
  is_visible : boolean
  archived_at : timestamp?
  is_generating : boolean
  refresh_mode : varchar
  sort_order : int
  version : int
  config_json : json
  config_hash : varchar
  include_in_briefing_override : boolean?
  created_at : timestamp
  updated_at : timestamp
}

note right of DashboardWidget
config_json and widget snapshots also carry
widget-specific display payloads such as xkcd
and NatGeo Daily Photo metadata.
end note

class Connector {
  +connector_id : UUID
  --
  tenant_id : UUID
  owner_user_id : UUID?
  connector_type : varchar
  name : varchar
  status : varchar
  auth_type : varchar
  base_url : varchar
  config_json : json
  secret_ref : varchar
  last_sync_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

class WidgetConnector {
  +widget_connector_id : UUID
  --
  dashboard_widget_id : UUID
  connector_id : UUID
  usage_role : varchar
  created_at : timestamp
}

class BriefingSnapshot {
  +snapshot_id : UUID
  --
  tenant_id : UUID
  user_id : UUID
  dashboard_id : UUID
  snapshot_date : date
  generated_at : timestamp
  generation_status : varchar
  summary_json : json
  expires_at : timestamp
}

class WidgetSnapshot {
  +widget_snapshot_id : UUID
  --
  snapshot_id : UUID
  dashboard_widget_id : UUID
  widget_type : varchar
  title : varchar
  content_json : json
  content_hash : varchar
  generated_at : timestamp
  status : varchar
  error_message : varchar
}

class SnapshotGenerationJob {
  +snapshot_generation_job_id : UUID
  --
  widget_id : UUID
  dashboard_id : UUID
  tenant_id : UUID
  user_id : UUID
  snapshot_date : date
  trigger_source : varchar
  idempotency_key : varchar
  requested_config_version : int
  requested_config_hash : varchar
  status : varchar
  attempt_count : int
  duplicate_skip_count : int
  last_message_id : varchar
  last_error : varchar
  started_at : timestamp
  completed_at : timestamp
  lease_expires_at : timestamp
  last_duplicate_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

class DashboardBriefingGenerationJob {
  +dashboard_briefing_generation_job_id : UUID
  --
  dashboard_id : UUID
  tenant_id : UUID
  owner_user_id : UUID
  idempotency_key : varchar
  status : SnapshotJobStatus
  attempt_count : int
  duplicate_skip_count : int
  last_message_id : varchar?
  last_error : varchar?
  started_at : timestamp?
  completed_at : timestamp?
  lease_expires_at : timestamp?
  last_duplicate_at : timestamp?
  created_at : timestamp
  updated_at : timestamp
}

class DashboardBriefingPreference {
  +dashboard_briefing_preference_id : UUID
  --
  dashboard_id : UUID
  enabled : boolean
  auto_generate : boolean
  target_duration_seconds : int
  tone : varchar
  language : varchar
  voice_name : varchar
  include_widget_types_json : json
  created_at : timestamp
  updated_at : timestamp
}

class TenantAiConfiguration {
  +tenant_ai_configuration_id : UUID
  --
  tenant_id : UUID
  openai_api_key : varchar
  openai_model : varchar
  created_at : timestamp
  updated_at : timestamp
}

class DashboardBriefing {
  +dashboard_briefing_id : UUID
  --
  dashboard_id : UUID
  status : varchar
  source_snapshot_hash : varchar
  generated_at : timestamp
  model_name : varchar
  prompt_version : varchar
  script_text : text
  script_json : json
  estimated_duration_seconds : int
  error_message : varchar
  created_at : timestamp
  updated_at : timestamp
}

class DashboardBriefingAudio {
  +dashboard_briefing_audio_id : UUID
  --
  dashboard_briefing_id : UUID
  provider : varchar
  voice_name : varchar
  storage_key : varchar
  mime_type : varchar
  duration_seconds : int
  generated_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

class ReferenceCity {
  +reference_city_id : UUID
  --
  tenant_id : UUID?
  geoname_id : int
  name : varchar
  ascii_name : varchar
  country_code : varchar
  admin_name_1 : varchar?
  timezone : varchar?
  latitude : decimal
  longitude : decimal
  population : bigint?
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

class RssFeedCategory {
  +rss_feed_category_id : UUID
  --
  tenant_id : UUID
  name : varchar
  normalized_name : varchar
  description : varchar
  sort_order : int
  created_at : timestamp
  updated_at : timestamp
}

class RssFeed {
  +rss_feed_id : UUID
  --
  category_id : UUID
  name : varchar
  url : varchar
  created_at : timestamp
  updated_at : timestamp
}

class NewsArticleSelection {
  +news_article_selection_id : UUID
  --
  tenant_id : UUID
  dashboard_widget_id : UUID
  snapshot_date : date
  article_key : varchar
  category_name : varchar
  category_description : varchar
  title : varchar
  article_url : varchar
  summary : varchar
  source_name : varchar
  published_at : timestamp?
  created_at : timestamp
  updated_at : timestamp
}

class ApplicationLogEvent {
  +application_log_event_id : varchar
  --
  timestamp : timestamp
  level : ApplicationLogLevel
  scope : varchar
  event : varchar
  message : varchar
  context_json : json?
  created_at : timestamp
}

Tenant "1" -- "0..*" AppUser : has >
Tenant "1" -- "0..*" Dashboard : owns >
Tenant "1" -- "0..*" Connector : provides >
Tenant "0..1" -- "0..*" ReferenceCity : scopes >
Tenant "1" -- "0..*" RssFeedCategory : owns >
Tenant "1" -- "0..*" NewsArticleSelection : scopes >
Tenant "1" -- "0..*" DashboardWidget : scopes >
Tenant "1" -- "0..*" BriefingSnapshot : contains >
Tenant "1" -- "0..1" TenantAiConfiguration : configures >

AppUser "1" -- "0..*" Dashboard : owns >
AppUser "0..1" -- "0..*" Connector : owns >
Dashboard "1" -- "0..*" DashboardWidget : contains >

DashboardWidget "1" -- "0..*" WidgetConnector : uses >
Connector "1" -- "0..*" WidgetConnector : linked to >

AppUser "1" -- "0..*" BriefingSnapshot : receives >
Dashboard "1" -- "0..*" BriefingSnapshot : rendered as >

BriefingSnapshot "1" -- "0..*" WidgetSnapshot : includes >
DashboardWidget "1" -- "0..*" WidgetSnapshot : materialised as >
DashboardWidget "1" -- "0..*" SnapshotGenerationJob : requested as >
DashboardWidget "1" -- "0..*" NewsArticleSelection : selects >
AppUser "1" -- "0..*" DashboardBriefingGenerationJob : owns >
Dashboard "1" -- "0..*" DashboardBriefingGenerationJob : queues >
Dashboard "1" -- "0..1" DashboardBriefingPreference : configures >
Dashboard "1" -- "0..*" DashboardBriefing : produces >
DashboardBriefing "1" -- "0..*" DashboardBriefingAudio : renders >
RssFeedCategory "1" -- "0..*" RssFeed : contains >

note right of DashboardWidget
Represents the configured widget instance
placed on a dashboard layout.
end note

note right of AppUser
Voice assistants use account-linked bearer tokens
resolved at request time.
No Alexa-specific identity is persisted yet.
end note

note right of WidgetSnapshot
Stores the resolved content displayed
for a widget at a specific point in time.
Denormalises widget type and title so
historical snapshots remain readable even
if widget configuration changes later.
end note

note right of SnapshotGenerationJob
Tracks idempotent widget snapshot commands.
Used to coalesce duplicate RabbitMQ deliveries,
record retries, and mark stale jobs skipped.
duplicate_skip_count and last_duplicate_at retain
evidence of coalesced duplicate deliveries.
lease_expires_at permits recovery of abandoned
PROCESSING work after a worker failure.
The logical key is widget_id + snapshot_date
+ requested_config_hash.
dashboard_id, tenant_id, and user_id are retained
scope identifiers without separate foreign keys in
the current Prisma model.
end note

note right of DashboardBriefingGenerationJob
Tracks dashboard-audio commands independently from
widget jobs, including idempotency, retry evidence,
duplicate accounting, and a recoverable processing lease.
RabbitMQ quorum queues provide durable at-least-once
delivery, TTL retry backoff, and terminal dead lettering;
this table remains authoritative for job state.
end note

note bottom of Connector
Tenant-level integration configuration,
for example weather, calendar, email, RSS, or news.
Secrets stay outside Postgres and are
referenced through secret_ref.
end note

note right of AppUser
Stores persisted profile details and
delivery preferences that must survive
auth token refreshes. Telegram is the
first implemented audio-delivery channel.
Profile images are currently stored as
base64 data on the user record.
Preferred language is also stored here so
every LLM prompt can target the user's
chosen output language.
end note

note bottom of BriefingSnapshot
Recommended unique key:
(user_id, dashboard_id, snapshot_date)
end note

note right of DashboardBriefing
Dashboard-level derived artifact built
from the latest eligible widget snapshots.
Stores the structured script contract and
the source hash used for cache reuse.
end note

note right of DashboardBriefingPreference
Controls whether dashboard audio briefing
is enabled and how it should sound.
Widget instance overrides still control
which widgets contribute content.
end note

note right of TenantAiConfiguration
openai_api_key is a deprecated compatibility column.
Runtime code must neither read nor write it. OPENAI_API_KEY
is injected from a root-owned mode-0600 environment file
outside immutable releases; the selected model remains
non-secret tenant configuration in PostgreSQL.
end note

note right of DashboardBriefingAudio
storage_key is relative metadata. Audio bytes belong
in the persistent AUDIO_BRIEFING_STORAGE_DIR mount
shared by backend and worker, not inside a container layer.
end note

note bottom of ApplicationLogEvent
Independent operational event table; it has no foreign key
to tenant or user in the current Prisma schema.
end note

' Login recovery and logo repair do not change relational entities or identities.
@enduml
